cosmetics & resolve deprecations